[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11"
eframe={version= "0.31.1", optional=true}
egui={version= "0.31.1", optional=true}
csv = {version="1.3.1",optional=true}
rand = {version="0.8.5",optional = true}

[features]
gui = ["eframe", "egui","csv","rand"]